--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
-streamlit
-scikit-learn
-nltk
+streamlit==0.90.0    # Version of Streamlit used
+nltk==3.6.5          # Natural Language Toolkit for text preprocessing
+scikit-learn==0.24.2 # Machine learning library for model building
+
