--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
 streamlit    # Version of Streamlit used
-nltk==3.6.5          # Natural Language Toolkit for text preprocessing
-scikit-learn==0.24.2 # Machine learning library for model building
+nltk        # Natural Language Toolkit for text preprocessing
+scikit-learn # Machine learning library for model building
 
